@@ -1065,3 +1065,7 @@ table.dataTable {
 	0%, 39%, 100% { opacity: 0; }
 	40% { opacity: 1; } 
 }
+
+input.lms-ui-quick-search {
+	display: none;
+}
